--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,16 @@
 asgiref==3.5.2
-Django==4.1.3
+certifi==2022.9.24
+charset-normalizer==2.1.1
+Django==3.2
+django-rest-auth==0.9.5
 djangorestframework==3.14.0
 flake8==5.0.4
+idna==3.4
 mccabe==0.7.0
 pycodestyle==2.9.1
 pyflakes==2.5.0
 pytz==2022.6
+requests==2.28.1
+six==1.16.0
 sqlparse==0.4.3
+urllib3==1.26.12
