--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,8 @@ asgiref==3.5.2
 certifi==2022.9.24
 cffi==1.15.1
 charset-normalizer==2.1.1
+coreapi==2.3.3
+coreschema==0.0.4
 cryptography==38.0.3
 defusedxml==0.7.1
 Django==3.2
@@ -10,6 +12,9 @@ django-rest-auth==0.9.5
 djangorestframework==3.14.0
 flake8==5.0.4
 idna==3.4
+itypes==1.2.0
+Jinja2==3.1.2
+MarkupSafe==2.1.1
 mccabe==0.7.0
 oauthlib==3.2.2
 pycodestyle==2.9.1
@@ -18,8 +23,10 @@ pyflakes==2.5.0
 PyJWT==2.6.0
 python3-openid==3.2.0
 pytz==2022.6
+PyYAML==5.1
 requests==2.28.1
 requests-oauthlib==1.3.1
 six==1.16.0
 sqlparse==0.4.3
+uritemplate==4.1.1
 urllib3==1.26.12
